unpackaged/main/default/objects/Premium_Group_Charge__c/Premium_Group_Charge__c.object-meta.xml
<CustomObject>
    <label>Premium Group Charge</label>
    <nameField>
        <displayFormat>PGC-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premium Group Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>