unpackaged/main/default/objects/Premium_Group_Charge__c/fields/Premium_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Premium_Flat_Rate__c</fullName>
    <description>Premium Charges in amounts</description>
    <inlineHelpText>Premium Charges in amounts</inlineHelpText>
    <label>Premium Flat Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>