unpackaged/main/default/objects/Premium_Group_Charge__c/fields/Premium_Group__c.field-meta.xml
<CustomField>
    <fullName>Premium_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the Premium Group record</description>
    <label>Premium Group</label>
    <referenceTo>Premium_Group__c</referenceTo>
    <relationshipLabel>Premium Group Charges</relationshipLabel>
    <relationshipName>Premium_Group_Charges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>