unpackaged/main/default/objects/Premium_Group_Charge__c/fields/Premium_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Premium_Group_Name__c</fullName>
    <formula>Premium_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Group Name</label>
    <type>Text</type>
</CustomField>