unpackaged/main/default/objects/Premium_Group_Charge__c/fields/Premium_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Premium_Percentage__c</fullName>
    <description>Premium Charges in percentage (%)</description>
    <label>Premium Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>