unpackaged/main/default/objects/Premium_Group_Charge__c/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the Rate Card record</description>
    <inlineHelpText>Link to the Rate Card record</inlineHelpText>
    <label>Rate Card</label>
    <referenceTo>csmso__Rate_Card__c</referenceTo>
    <relationshipLabel>Premium Group Charges</relationshipLabel>
    <relationshipName>Premium_Group_Charges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>