unpackaged/main/default/objects/Premium_Group_Charge__c/validationRules/Currency_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_required</fullName>
    <active>true</active>
    <description>Currency is required field.</description>
    <errorConditionFormula>ISBLANK(TEXT( CurrencyIsoCode ))</errorConditionFormula>
    <errorMessage>Currency is required field.</errorMessage>
</ValidationRule>