unpackaged/main/default/objects/Premium_Group_Charge__c/validationRules/PGC_currency_RC_currency.validationRule-meta.xml
<ValidationRule>
    <fullName>PGC_currency_RC_currency</fullName>
    <active>true</active>
    <description>Premium Group Charge currency must be equal to Rate Card currency</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode)  &lt;&gt;  TEXT(Rate_Card__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Premium Group Charge currency must be equal to Rate Card currency</errorMessage>
</ValidationRule>