unpackaged/main/default/objects/Premium_Group_Charge__c/validationRules/Premium_Flat_Rate_and_Premium_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Premium_Flat_Rate_and_Premium_Percentage</fullName>
    <active>true</active>
    <description>Premium Flat Rate and Premium Percentage cannot be both populated or empty, only one can be populated.</description>
    <errorConditionFormula>(NOT(ISBLANK(Premium_Flat_Rate__c))  &amp;&amp; NOT(ISBLANK(Premium_Percentage__c)))  || (ISBLANK(Premium_Flat_Rate__c)  &amp;&amp; ISBLANK(Premium_Percentage__c))</errorConditionFormula>
    <errorMessage>Premium Flat Rate and Premium Percentage cannot be both populated or empty, only one can be populated.</errorMessage>
</ValidationRule>